// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Probando la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "23/11/25",
      "hora": "7:40pm",
      "id": 1763949929719,
      "mascota": "Donald BB",
      "propietario": "Miguel",
      "sintomas": "SOlo come XD",
      "telefono": "5533243707",
    },
  ],
}
`;

exports[`Probando la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "23/11/25",
      "hora": "7:40pm",
      "id": 1763949929719,
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "SOlo duerme",
      "telefono": "39812938",
    },
  ],
}
`;

exports[`Probando la clase de citas Eliminar Cita 1`] = `
Citas {
  "citas": [],
}
`;
